Added working Placeholder.html

--- a/frontend/modules/modality.html
+++ b/frontend/modules/modality.html
@@ -8,22 +8,9 @@
     <link rel="stylesheet" href="../src/styles/styles.css" />
 </head>
 
-<body>
-    <header class="site-header">
-        <nav class="site-nav" aria-label="Primary">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./topic.html">Topic</a></li>
-                <li><a href="./research.html">Research</a></li>
-                <li><a href="./data.html">Data</a></li>
-                <li><a href="./references.html">References</a></li>
-                <li><a href="./style.html">Style</a></li>
-                <li><a href="./layout.html">Layout</a></li>
-                <li><a aria-current="page" href="./modality.html">Modality</a></li>
-                <li><a href="./professionalization.html">Professionalization</a></li>
-            </ul>
-        </nav>
-    </header>
-</body>
+<script>window.location.replace('./placeholder.html');</script>
+<noscript>
+    <meta http-equiv="refresh" content="0; url=./placeholder.html">
+</noscript>
 
 </html>
